// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when generating xsd and comparing it to data standard 3.1 authoritative artifacts should have complex types in the correct order 1`] = `
Array [
  "===== Domain Entities =====",
  "AcademicWeek",
  "Account",
  "AccountabilityRating",
  "AccountCode",
  "Actual",
  "Assessment",
  "AssessmentItem",
  "BellSchedule",
  "Budget",
  "Calendar",
  "CalendarDate",
  "ClassPeriod",
  "Cohort",
  "CommunityOrganization",
  "CommunityProvider",
  "CommunityProviderLicense",
  "CompetencyObjective",
  "ContractedStaff",
  "Course",
  "CourseOffering",
  "CourseTranscript",
  "Credential",
  "DisciplineAction",
  "DisciplineIncident",
  "EducationContent",
  "EducationOrganization",
  "EducationOrganizationNetwork",
  "EducationServiceCenter",
  "Grade",
  "GradebookEntry",
  "GradingPeriod",
  "GraduationPlan",
  "Intervention",
  "InterventionPrescription",
  "InterventionStudy",
  "LearningObjective",
  "LearningStandard",
  "LocalEducationAgency",
  "Location",
  "ObjectiveAssessment",
  "OpenStaffPosition",
  "Parent",
  "Payroll",
  "Person",
  "PostSecondaryEvent",
  "PostSecondaryInstitution",
  "Program",
  "ReportCard",
  "RestraintEvent",
  "School",
  "Section",
  "SectionAttendanceTakenEvent",
  "Session",
  "Staff",
  "StaffAbsenceEvent",
  "StaffLeave",
  "StateEducationAgency",
  "Student",
  "StudentAcademicRecord",
  "StudentAssessment",
  "StudentCompetencyObjective",
  "StudentGradebookEntry",
  "StudentInterventionAttendanceEvent",
  "StudentLearningObjective",
  "StudentProgramAttendanceEvent",
  "StudentSchoolAttendanceEvent",
  "StudentSectionAttendanceEvent",
  "Survey",
  "SurveyQuestion",
  "SurveyQuestionResponse",
  "SurveyResponse",
  "SurveySection",
  "SurveySectionResponse",
  "===== Descriptors =====",
  "AbsenceEventCategoryDescriptor",
  "AcademicHonorCategoryDescriptor",
  "AcademicSubjectDescriptor",
  "AccommodationDescriptor",
  "AccountClassificationDescriptor",
  "AchievementCategoryDescriptor",
  "AdditionalCreditTypeDescriptor",
  "AddressTypeDescriptor",
  "AdministrationEnvironmentDescriptor",
  "AdministrativeFundingControlDescriptor",
  "AssessmentCategoryDescriptor",
  "AssessmentIdentificationSystemDescriptor",
  "AssessmentItemCategoryDescriptor",
  "AssessmentItemResultDescriptor",
  "AssessmentPeriodDescriptor",
  "AssessmentReportingMethodDescriptor",
  "AttemptStatusDescriptor",
  "AttendanceEventCategoryDescriptor",
  "BehaviorDescriptor",
  "CalendarEventDescriptor",
  "CalendarTypeDescriptor",
  "CareerPathwayDescriptor",
  "CharterApprovalAgencyTypeDescriptor",
  "CharterStatusDescriptor",
  "CitizenshipStatusDescriptor",
  "ClassroomPositionDescriptor",
  "CohortScopeDescriptor",
  "CohortTypeDescriptor",
  "CohortYearTypeDescriptor",
  "CompetencyLevelDescriptor",
  "ContactTypeDescriptor",
  "ContentClassDescriptor",
  "ContinuationOfServicesReasonDescriptor",
  "CostRateDescriptor",
  "CountryDescriptor",
  "CourseAttemptResultDescriptor",
  "CourseDefinedByDescriptor",
  "CourseGPAApplicabilityDescriptor",
  "CourseIdentificationSystemDescriptor",
  "CourseLevelCharacteristicDescriptor",
  "CourseRepeatCodeDescriptor",
  "CredentialFieldDescriptor",
  "CredentialTypeDescriptor",
  "CreditCategoryDescriptor",
  "CreditTypeDescriptor",
  "CTEProgramServiceDescriptor",
  "CurriculumUsedDescriptor",
  "DeliveryMethodDescriptor",
  "DiagnosisDescriptor",
  "DiplomaLevelDescriptor",
  "DiplomaTypeDescriptor",
  "DisabilityDescriptor",
  "DisabilityDesignationDescriptor",
  "DisabilityDeterminationSourceTypeDescriptor",
  "DisciplineActionLengthDifferenceReasonDescriptor",
  "DisciplineDescriptor",
  "DisciplineIncidentParticipationCodeDescriptor",
  "EducationalEnvironmentDescriptor",
  "EducationOrganizationCategoryDescriptor",
  "EducationOrganizationIdentificationSystemDescriptor",
  "EducationPlanDescriptor",
  "ElectronicMailTypeDescriptor",
  "EmploymentStatusDescriptor",
  "EntryGradeLevelReasonDescriptor",
  "EntryTypeDescriptor",
  "EventCircumstanceDescriptor",
  "ExitWithdrawTypeDescriptor",
  "GradebookEntryTypeDescriptor",
  "GradeLevelDescriptor",
  "GradePointAverageTypeDescriptor",
  "GradeTypeDescriptor",
  "GradingPeriodDescriptor",
  "GraduationPlanTypeDescriptor",
  "GunFreeSchoolsActReportingStatusDescriptor",
  "HomelessPrimaryNighttimeResidenceDescriptor",
  "HomelessProgramServiceDescriptor",
  "IdentificationDocumentUseDescriptor",
  "IncidentLocationDescriptor",
  "IndicatorDescriptor",
  "IndicatorGroupDescriptor",
  "IndicatorLevelDescriptor",
  "InstitutionTelephoneNumberTypeDescriptor",
  "InteractivityStyleDescriptor",
  "InternetAccessDescriptor",
  "InterventionClassDescriptor",
  "InterventionEffectivenessRatingDescriptor",
  "LanguageDescriptor",
  "LanguageInstructionProgramServiceDescriptor",
  "LanguageUseDescriptor",
  "LearningStandardCategoryDescriptor",
  "LearningStandardEquivalenceStrengthDescriptor",
  "LearningStandardScopeDescriptor",
  "LevelOfEducationDescriptor",
  "LicenseStatusDescriptor",
  "LicenseTypeDescriptor",
  "LimitedEnglishProficiencyDescriptor",
  "LocaleDescriptor",
  "LocalEducationAgencyCategoryDescriptor",
  "MagnetSpecialProgramEmphasisSchoolDescriptor",
  "MediumOfInstructionDescriptor",
  "MethodCreditEarnedDescriptor",
  "MigrantEducationProgramServiceDescriptor",
  "MonitoredDescriptor",
  "NeglectedOrDelinquentProgramDescriptor",
  "NeglectedOrDelinquentProgramServiceDescriptor",
  "NetworkPurposeDescriptor",
  "OldEthnicityDescriptor",
  "OperationalStatusDescriptor",
  "OtherNameTypeDescriptor",
  "ParticipationDescriptor",
  "ParticipationStatusDescriptor",
  "PerformanceBaseConversionDescriptor",
  "PerformanceLevelDescriptor",
  "PersonalInformationVerificationDescriptor",
  "PlatformTypeDescriptor",
  "PopulationServedDescriptor",
  "PostingResultDescriptor",
  "PostSecondaryEventCategoryDescriptor",
  "PostSecondaryInstitutionLevelDescriptor",
  "ProficiencyDescriptor",
  "ProgramAssignmentDescriptor",
  "ProgramCharacteristicDescriptor",
  "ProgramSponsorDescriptor",
  "ProgramTypeDescriptor",
  "ProgressDescriptor",
  "ProgressLevelDescriptor",
  "ProviderCategoryDescriptor",
  "ProviderProfitabilityDescriptor",
  "ProviderStatusDescriptor",
  "PublicationStatusDescriptor",
  "QuestionFormDescriptor",
  "RaceDescriptor",
  "ReasonExitedDescriptor",
  "ReasonNotTestedDescriptor",
  "RecognitionTypeDescriptor",
  "RelationDescriptor",
  "RepeatIdentifierDescriptor",
  "ReporterDescriptionDescriptor",
  "ResidencyStatusDescriptor",
  "ResponseIndicatorDescriptor",
  "ResponsibilityDescriptor",
  "RestraintEventReasonDescriptor",
  "ResultDatatypeTypeDescriptor",
  "RetestIndicatorDescriptor",
  "SchoolCategoryDescriptor",
  "SchoolChoiceImplementStatusDescriptor",
  "SchoolFoodServiceProgramServiceDescriptor",
  "SchoolTypeDescriptor",
  "SectionCharacteristicDescriptor",
  "SeparationDescriptor",
  "SeparationReasonDescriptor",
  "ServiceDescriptor",
  "SexDescriptor",
  "SourceSystemDescriptor",
  "SpecialEducationProgramServiceDescriptor",
  "SpecialEducationSettingDescriptor",
  "StaffClassificationDescriptor",
  "StaffIdentificationSystemDescriptor",
  "StaffLeaveEventCategoryDescriptor",
  "StateAbbreviationDescriptor",
  "StudentCharacteristicDescriptor",
  "StudentIdentificationSystemDescriptor",
  "StudentParticipationCodeDescriptor",
  "SurveyCategoryDescriptor",
  "SurveyLevelDescriptor",
  "TeachingCredentialBasisDescriptor",
  "TeachingCredentialDescriptor",
  "TechnicalSkillsAssessmentDescriptor",
  "TelephoneNumberTypeDescriptor",
  "TermDescriptor",
  "TitleIPartAParticipantDescriptor",
  "TitleIPartAProgramServiceDescriptor",
  "TitleIPartASchoolDesignationDescriptor",
  "TribalAffiliationDescriptor",
  "VisaDescriptor",
  "WeaponDescriptor",
  "===== Associations =====",
  "EducationOrganizationInterventionPrescriptionAssociation",
  "EducationOrganizationNetworkAssociation",
  "EducationOrganizationPeerAssociation",
  "FeederSchoolAssociation",
  "GeneralStudentProgramAssociation",
  "LearningStandardEquivalenceAssociation",
  "StaffCohortAssociation",
  "StaffDisciplineIncidentAssociation",
  "StaffEducationOrganizationAssignmentAssociation",
  "StaffEducationOrganizationContactAssociation",
  "StaffEducationOrganizationEmploymentAssociation",
  "StaffProgramAssociation",
  "StaffSchoolAssociation",
  "StaffSectionAssociation",
  "StudentCohortAssociation",
  "StudentCTEProgramAssociation",
  "StudentDisciplineIncidentAssociation",
  "StudentEducationOrganizationAssociation",
  "StudentEducationOrganizationResponsibilityAssociation",
  "StudentHomelessProgramAssociation",
  "StudentInterventionAssociation",
  "StudentLanguageInstructionProgramAssociation",
  "StudentMigrantEducationProgramAssociation",
  "StudentNeglectedOrDelinquentProgramAssociation",
  "StudentParentAssociation",
  "StudentProgramAssociation",
  "StudentSchoolAssociation",
  "StudentSchoolFoodServiceProgramAssociation",
  "StudentSectionAssociation",
  "StudentSpecialEducationProgramAssociation",
  "StudentTitleIPartAProgramAssociation",
  "SurveyCourseAssociation",
  "SurveyProgramAssociation",
  "SurveyResponseEducationOrganizationTargetAssociation",
  "SurveyResponseStaffTargetAssociation",
  "SurveySectionAssociation",
  "SurveySectionResponseEducationOrganizationTargetAssociation",
  "SurveySectionResponseStaffTargetAssociation",
  "===== Base Types (borrowed from NEIM standards) =====",
  "ComplexObjectType",
  "DescriptorType",
  "ReferenceType",
  "===== Extended Reference Types =====",
  "AcademicWeekIdentityType",
  "AcademicWeekReferenceType",
  "AccountabilityRatingIdentityType",
  "AccountabilityRatingReferenceType",
  "AccountCodeIdentityType",
  "AccountCodeReferenceType",
  "AccountIdentityType",
  "AccountReferenceType",
  "ActualIdentityType",
  "ActualReferenceType",
  "AssessmentIdentityType",
  "AssessmentItemIdentityType",
  "AssessmentItemReferenceType",
  "AssessmentLookupType",
  "AssessmentReferenceType",
  "BellScheduleIdentityType",
  "BellScheduleReferenceType",
  "BudgetIdentityType",
  "BudgetReferenceType",
  "CalendarDateIdentityType",
  "CalendarDateReferenceType",
  "CalendarIdentityType",
  "CalendarReferenceType",
  "ClassPeriodIdentityType",
  "ClassPeriodReferenceType",
  "CohortIdentityType",
  "CohortReferenceType",
  "CommunityOrganizationIdentityType",
  "CommunityOrganizationReferenceType",
  "CommunityProviderIdentityType",
  "CommunityProviderLicenseIdentityType",
  "CommunityProviderLicenseReferenceType",
  "CommunityProviderReferenceType",
  "CompetencyObjectiveIdentityType",
  "CompetencyObjectiveReferenceType",
  "ContractedStaffIdentityType",
  "ContractedStaffReferenceType",
  "CourseIdentityType",
  "CourseLookupType",
  "CourseOfferingIdentityType",
  "CourseOfferingReferenceType",
  "CourseReferenceType",
  "CourseTranscriptIdentityType",
  "CourseTranscriptReferenceType",
  "CredentialIdentityType",
  "CredentialReferenceType",
  "DisciplineActionIdentityType",
  "DisciplineActionReferenceType",
  "DisciplineIncidentIdentityType",
  "DisciplineIncidentReferenceType",
  "EducationContentIdentityType",
  "EducationContentReferenceType",
  "EducationOrganizationIdentityType",
  "EducationOrganizationInterventionPrescriptionAssociationIdentityType",
  "EducationOrganizationInterventionPrescriptionAssociationReferenceType",
  "EducationOrganizationLookupType",
  "EducationOrganizationNetworkAssociationIdentityType",
  "EducationOrganizationNetworkAssociationReferenceType",
  "EducationOrganizationNetworkIdentityType",
  "EducationOrganizationNetworkLookupType",
  "EducationOrganizationNetworkReferenceType",
  "EducationOrganizationPeerAssociationIdentityType",
  "EducationOrganizationPeerAssociationReferenceType",
  "EducationOrganizationReferenceType",
  "EducationServiceCenterIdentityType",
  "EducationServiceCenterLookupType",
  "EducationServiceCenterReferenceType",
  "FeederSchoolAssociationIdentityType",
  "FeederSchoolAssociationReferenceType",
  "GeneralStudentProgramAssociationIdentityType",
  "GeneralStudentProgramAssociationReferenceType",
  "GradebookEntryIdentityType",
  "GradebookEntryLookupType",
  "GradebookEntryReferenceType",
  "GradeIdentityType",
  "GradeReferenceType",
  "GradingPeriodIdentityType",
  "GradingPeriodReferenceType",
  "GraduationPlanIdentityType",
  "GraduationPlanReferenceType",
  "InterventionIdentityType",
  "InterventionPrescriptionIdentityType",
  "InterventionPrescriptionReferenceType",
  "InterventionReferenceType",
  "InterventionStudyIdentityType",
  "InterventionStudyReferenceType",
  "LearningObjectiveIdentityType",
  "LearningObjectiveReferenceType",
  "LearningStandardEquivalenceAssociationIdentityType",
  "LearningStandardEquivalenceAssociationReferenceType",
  "LearningStandardIdentityType",
  "LearningStandardLookupType",
  "LearningStandardReferenceType",
  "LocalEducationAgencyIdentityType",
  "LocalEducationAgencyLookupType",
  "LocalEducationAgencyReferenceType",
  "LocationIdentityType",
  "LocationReferenceType",
  "ObjectiveAssessmentIdentityType",
  "ObjectiveAssessmentReferenceType",
  "OpenStaffPositionIdentityType",
  "OpenStaffPositionReferenceType",
  "ParentIdentityType",
  "ParentLookupType",
  "ParentReferenceType",
  "PayrollIdentityType",
  "PayrollReferenceType",
  "PersonIdentityType",
  "PersonReferenceType",
  "PostSecondaryEventIdentityType",
  "PostSecondaryEventReferenceType",
  "PostSecondaryInstitutionIdentityType",
  "PostSecondaryInstitutionReferenceType",
  "ProgramIdentityType",
  "ProgramLookupType",
  "ProgramReferenceType",
  "ReportCardIdentityType",
  "ReportCardReferenceType",
  "RestraintEventIdentityType",
  "RestraintEventReferenceType",
  "SchoolIdentityType",
  "SchoolLookupType",
  "SchoolReferenceType",
  "SectionAttendanceTakenEventIdentityType",
  "SectionAttendanceTakenEventReferenceType",
  "SectionIdentityType",
  "SectionLookupType",
  "SectionReferenceType",
  "SessionIdentityType",
  "SessionLookupType",
  "SessionReferenceType",
  "StaffAbsenceEventIdentityType",
  "StaffAbsenceEventReferenceType",
  "StaffCohortAssociationIdentityType",
  "StaffCohortAssociationReferenceType",
  "StaffDisciplineIncidentAssociationIdentityType",
  "StaffDisciplineIncidentAssociationReferenceType",
  "StaffEducationOrganizationAssignmentAssociationIdentityType",
  "StaffEducationOrganizationAssignmentAssociationReferenceType",
  "StaffEducationOrganizationContactAssociationIdentityType",
  "StaffEducationOrganizationContactAssociationReferenceType",
  "StaffEducationOrganizationEmploymentAssociationIdentityType",
  "StaffEducationOrganizationEmploymentAssociationReferenceType",
  "StaffIdentityType",
  "StaffLeaveIdentityType",
  "StaffLeaveReferenceType",
  "StaffLookupType",
  "StaffProgramAssociationIdentityType",
  "StaffProgramAssociationReferenceType",
  "StaffReferenceType",
  "StaffSchoolAssociationIdentityType",
  "StaffSchoolAssociationReferenceType",
  "StaffSectionAssociationIdentityType",
  "StaffSectionAssociationReferenceType",
  "StateEducationAgencyIdentityType",
  "StateEducationAgencyLookupType",
  "StateEducationAgencyReferenceType",
  "StudentAcademicRecordIdentityType",
  "StudentAcademicRecordReferenceType",
  "StudentAssessmentIdentityType",
  "StudentAssessmentReferenceType",
  "StudentCohortAssociationIdentityType",
  "StudentCohortAssociationReferenceType",
  "StudentCompetencyObjectiveIdentityType",
  "StudentCompetencyObjectiveReferenceType",
  "StudentCTEProgramAssociationIdentityType",
  "StudentCTEProgramAssociationReferenceType",
  "StudentDisciplineIncidentAssociationIdentityType",
  "StudentDisciplineIncidentAssociationReferenceType",
  "StudentEducationOrganizationAssociationIdentityType",
  "StudentEducationOrganizationAssociationReferenceType",
  "StudentEducationOrganizationResponsibilityAssociationIdentityType",
  "StudentEducationOrganizationResponsibilityAssociationReferenceType",
  "StudentGradebookEntryIdentityType",
  "StudentGradebookEntryReferenceType",
  "StudentHomelessProgramAssociationIdentityType",
  "StudentHomelessProgramAssociationReferenceType",
  "StudentIdentityType",
  "StudentInterventionAssociationIdentityType",
  "StudentInterventionAssociationReferenceType",
  "StudentInterventionAttendanceEventIdentityType",
  "StudentInterventionAttendanceEventReferenceType",
  "StudentLanguageInstructionProgramAssociationIdentityType",
  "StudentLanguageInstructionProgramAssociationReferenceType",
  "StudentLearningObjectiveIdentityType",
  "StudentLearningObjectiveReferenceType",
  "StudentLookupType",
  "StudentMigrantEducationProgramAssociationIdentityType",
  "StudentMigrantEducationProgramAssociationReferenceType",
  "StudentNeglectedOrDelinquentProgramAssociationIdentityType",
  "StudentNeglectedOrDelinquentProgramAssociationReferenceType",
  "StudentParentAssociationIdentityType",
  "StudentParentAssociationReferenceType",
  "StudentProgramAssociationIdentityType",
  "StudentProgramAssociationReferenceType",
  "StudentProgramAttendanceEventIdentityType",
  "StudentProgramAttendanceEventReferenceType",
  "StudentReferenceType",
  "StudentSchoolAssociationIdentityType",
  "StudentSchoolAssociationReferenceType",
  "StudentSchoolAttendanceEventIdentityType",
  "StudentSchoolAttendanceEventReferenceType",
  "StudentSchoolFoodServiceProgramAssociationIdentityType",
  "StudentSchoolFoodServiceProgramAssociationReferenceType",
  "StudentSectionAssociationIdentityType",
  "StudentSectionAssociationReferenceType",
  "StudentSectionAttendanceEventIdentityType",
  "StudentSectionAttendanceEventReferenceType",
  "StudentSpecialEducationProgramAssociationIdentityType",
  "StudentSpecialEducationProgramAssociationReferenceType",
  "StudentTitleIPartAProgramAssociationIdentityType",
  "StudentTitleIPartAProgramAssociationReferenceType",
  "SurveyCourseAssociationIdentityType",
  "SurveyCourseAssociationReferenceType",
  "SurveyIdentityType",
  "SurveyProgramAssociationIdentityType",
  "SurveyProgramAssociationReferenceType",
  "SurveyQuestionIdentityType",
  "SurveyQuestionReferenceType",
  "SurveyQuestionResponseIdentityType",
  "SurveyQuestionResponseReferenceType",
  "SurveyReferenceType",
  "SurveyResponseEducationOrganizationTargetAssociationIdentityType",
  "SurveyResponseEducationOrganizationTargetAssociationReferenceType",
  "SurveyResponseIdentityType",
  "SurveyResponseReferenceType",
  "SurveyResponseStaffTargetAssociationIdentityType",
  "SurveyResponseStaffTargetAssociationReferenceType",
  "SurveySectionAssociationIdentityType",
  "SurveySectionAssociationReferenceType",
  "SurveySectionIdentityType",
  "SurveySectionReferenceType",
  "SurveySectionResponseEducationOrganizationTargetAssociationIdentityType",
  "SurveySectionResponseEducationOrganizationTargetAssociationReferenceType",
  "SurveySectionResponseIdentityType",
  "SurveySectionResponseReferenceType",
  "SurveySectionResponseStaffTargetAssociationIdentityType",
  "SurveySectionResponseStaffTargetAssociationReferenceType",
  "===== Extended Descriptor Reference Types =====",
  "===== Common Types =====",
  "AcademicHonor",
  "Achievement",
  "AdditionalCredits",
  "Address",
  "AssessmentIdentificationCode",
  "AssessmentPerformanceLevel",
  "AssessmentPeriod",
  "AssessmentScore",
  "AttendanceEvent",
  "Behavior",
  "BirthData",
  "Citizenship",
  "ClassRanking",
  "CohortYear",
  "ContentStandard",
  "CourseIdentificationCode",
  "Credits",
  "CreditsByCourse",
  "CreditsByCreditCategory",
  "CreditsBySubject",
  "CTEProgram",
  "CTEProgramService",
  "Diploma",
  "Disability",
  "DisciplineIncidentExternalParticipant",
  "EducationContentSource",
  "EducationOrganizationIdentificationCode",
  "EducationOrganizationIndicator",
  "ElectronicMail",
  "EmploymentPeriod",
  "EnglishLanguageProficiencyAssessment",
  "GradePointAverage",
  "HomelessProgramService",
  "IdentificationDocument",
  "InstitutionTelephone",
  "InternationalAddress",
  "InterventionEffectiveness",
  "Language",
  "LanguageInstructionProgramService",
  "LearningResource",
  "LearningStandardGrade",
  "LearningStandardIdentificationCode",
  "License",
  "LocalEducationAgencyAccountability",
  "LocalEducationAgencyFederalFunds",
  "Matrix",
  "MeetingTime",
  "MigrantEducationProgramService",
  "Name",
  "NeglectedOrDelinquentProgramService",
  "OtherName",
  "ParticipationStatus",
  "PerformanceLevel",
  "Period",
  "PossibleResponse",
  "ProgramParticipation",
  "Recognition",
  "RequiredAssessment",
  "ResponseChoice",
  "SchoolFoodServiceProgramService",
  "ScoreResult",
  "Service",
  "ServiceProvider",
  "SpecialEducationProgramService",
  "StaffIdentificationCode",
  "StateEducationAgencyAccountability",
  "StateEducationAgencyFederalFunds",
  "StudentAssessmentItem",
  "StudentCharacteristic",
  "StudentIdentificationCode",
  "StudentIndicator",
  "StudentObjectiveAssessment",
  "SurveyQuestionMatrixElementResponse",
  "SurveyQuestionResponseValue",
  "Telephone",
  "TitleIPartAProgramService",
  "===== Enumerations and Enumerated Collections =====",
  "===== String Simple Types =====",
  "===== Numeric Simple Types =====",
]
`;

exports[`when generating xsd and comparing it to data standard 3.1 authoritative artifacts should have core with no differences 1`] = `
" 1 file changed, 2575 insertions(+), 181 deletions(-)
"
`;

exports[`when generating xsd and comparing it to data standard 3.1 authoritative artifacts should have schema annotation with no differences 1`] = `
" 1 file changed, 3 deletions(-)
"
`;

exports[`when generating xsd and comparing it to data standard 3.1 authoritative artifacts should have simple types in the correct order 1`] = `
Array [
  "===== Domain Entities =====",
  "===== Descriptors =====",
  "===== Associations =====",
  "===== Base Types (borrowed from NEIM standards) =====",
  "===== Extended Reference Types =====",
  "===== Extended Descriptor Reference Types =====",
  "AbsenceEventCategoryDescriptorReferenceType",
  "AcademicHonorCategoryDescriptorReferenceType",
  "AcademicSubjectDescriptorReferenceType",
  "AccommodationDescriptorReferenceType",
  "AccountClassificationDescriptorReferenceType",
  "AchievementCategoryDescriptorReferenceType",
  "AdditionalCreditTypeDescriptorReferenceType",
  "AddressTypeDescriptorReferenceType",
  "AdministrationEnvironmentDescriptorReferenceType",
  "AdministrativeFundingControlDescriptorReferenceType",
  "AssessmentCategoryDescriptorReferenceType",
  "AssessmentIdentificationSystemDescriptorReferenceType",
  "AssessmentItemCategoryDescriptorReferenceType",
  "AssessmentItemResultDescriptorReferenceType",
  "AssessmentPeriodDescriptorReferenceType",
  "AssessmentReportingMethodDescriptorReferenceType",
  "AttemptStatusDescriptorReferenceType",
  "AttendanceEventCategoryDescriptorReferenceType",
  "BehaviorDescriptorReferenceType",
  "CalendarEventDescriptorReferenceType",
  "CalendarTypeDescriptorReferenceType",
  "CareerPathwayDescriptorReferenceType",
  "CharterApprovalAgencyTypeDescriptorReferenceType",
  "CharterStatusDescriptorReferenceType",
  "CitizenshipStatusDescriptorReferenceType",
  "ClassroomPositionDescriptorReferenceType",
  "CohortScopeDescriptorReferenceType",
  "CohortTypeDescriptorReferenceType",
  "CohortYearTypeDescriptorReferenceType",
  "CompetencyLevelDescriptorReferenceType",
  "ContactTypeDescriptorReferenceType",
  "ContentClassDescriptorReferenceType",
  "ContinuationOfServicesReasonDescriptorReferenceType",
  "CostRateDescriptorReferenceType",
  "CountryDescriptorReferenceType",
  "CourseAttemptResultDescriptorReferenceType",
  "CourseDefinedByDescriptorReferenceType",
  "CourseGPAApplicabilityDescriptorReferenceType",
  "CourseIdentificationSystemDescriptorReferenceType",
  "CourseLevelCharacteristicDescriptorReferenceType",
  "CourseRepeatCodeDescriptorReferenceType",
  "CredentialFieldDescriptorReferenceType",
  "CredentialTypeDescriptorReferenceType",
  "CreditCategoryDescriptorReferenceType",
  "CreditTypeDescriptorReferenceType",
  "CTEProgramServiceDescriptorReferenceType",
  "CurriculumUsedDescriptorReferenceType",
  "DeliveryMethodDescriptorReferenceType",
  "DiagnosisDescriptorReferenceType",
  "DiplomaLevelDescriptorReferenceType",
  "DiplomaTypeDescriptorReferenceType",
  "DisabilityDescriptorReferenceType",
  "DisabilityDesignationDescriptorReferenceType",
  "DisabilityDeterminationSourceTypeDescriptorReferenceType",
  "DisciplineActionLengthDifferenceReasonDescriptorReferenceType",
  "DisciplineDescriptorReferenceType",
  "DisciplineIncidentParticipationCodeDescriptorReferenceType",
  "EducationalEnvironmentDescriptorReferenceType",
  "EducationOrganizationCategoryDescriptorReferenceType",
  "EducationOrganizationIdentificationSystemDescriptorReferenceType",
  "EducationPlanDescriptorReferenceType",
  "ElectronicMailTypeDescriptorReferenceType",
  "EmploymentStatusDescriptorReferenceType",
  "EntryGradeLevelReasonDescriptorReferenceType",
  "EntryTypeDescriptorReferenceType",
  "EventCircumstanceDescriptorReferenceType",
  "ExitWithdrawTypeDescriptorReferenceType",
  "GradebookEntryTypeDescriptorReferenceType",
  "GradeLevelDescriptorReferenceType",
  "GradePointAverageTypeDescriptorReferenceType",
  "GradeTypeDescriptorReferenceType",
  "GradingPeriodDescriptorReferenceType",
  "GraduationPlanTypeDescriptorReferenceType",
  "GunFreeSchoolsActReportingStatusDescriptorReferenceType",
  "HomelessPrimaryNighttimeResidenceDescriptorReferenceType",
  "HomelessProgramServiceDescriptorReferenceType",
  "IdentificationDocumentUseDescriptorReferenceType",
  "IncidentLocationDescriptorReferenceType",
  "IndicatorDescriptorReferenceType",
  "IndicatorGroupDescriptorReferenceType",
  "IndicatorLevelDescriptorReferenceType",
  "InstitutionTelephoneNumberTypeDescriptorReferenceType",
  "InteractivityStyleDescriptorReferenceType",
  "InternetAccessDescriptorReferenceType",
  "InterventionClassDescriptorReferenceType",
  "InterventionEffectivenessRatingDescriptorReferenceType",
  "LanguageDescriptorReferenceType",
  "LanguageInstructionProgramServiceDescriptorReferenceType",
  "LanguageUseDescriptorReferenceType",
  "LearningStandardCategoryDescriptorReferenceType",
  "LearningStandardEquivalenceStrengthDescriptorReferenceType",
  "LearningStandardScopeDescriptorReferenceType",
  "LevelOfEducationDescriptorReferenceType",
  "LicenseStatusDescriptorReferenceType",
  "LicenseTypeDescriptorReferenceType",
  "LimitedEnglishProficiencyDescriptorReferenceType",
  "LocaleDescriptorReferenceType",
  "LocalEducationAgencyCategoryDescriptorReferenceType",
  "MagnetSpecialProgramEmphasisSchoolDescriptorReferenceType",
  "MediumOfInstructionDescriptorReferenceType",
  "MethodCreditEarnedDescriptorReferenceType",
  "MigrantEducationProgramServiceDescriptorReferenceType",
  "MonitoredDescriptorReferenceType",
  "NeglectedOrDelinquentProgramDescriptorReferenceType",
  "NeglectedOrDelinquentProgramServiceDescriptorReferenceType",
  "NetworkPurposeDescriptorReferenceType",
  "OldEthnicityDescriptorReferenceType",
  "OperationalStatusDescriptorReferenceType",
  "OtherNameTypeDescriptorReferenceType",
  "ParticipationDescriptorReferenceType",
  "ParticipationStatusDescriptorReferenceType",
  "PerformanceBaseConversionDescriptorReferenceType",
  "PerformanceLevelDescriptorReferenceType",
  "PersonalInformationVerificationDescriptorReferenceType",
  "PlatformTypeDescriptorReferenceType",
  "PopulationServedDescriptorReferenceType",
  "PostingResultDescriptorReferenceType",
  "PostSecondaryEventCategoryDescriptorReferenceType",
  "PostSecondaryInstitutionLevelDescriptorReferenceType",
  "ProficiencyDescriptorReferenceType",
  "ProgramAssignmentDescriptorReferenceType",
  "ProgramCharacteristicDescriptorReferenceType",
  "ProgramSponsorDescriptorReferenceType",
  "ProgramTypeDescriptorReferenceType",
  "ProgressDescriptorReferenceType",
  "ProgressLevelDescriptorReferenceType",
  "ProviderCategoryDescriptorReferenceType",
  "ProviderProfitabilityDescriptorReferenceType",
  "ProviderStatusDescriptorReferenceType",
  "PublicationStatusDescriptorReferenceType",
  "QuestionFormDescriptorReferenceType",
  "RaceDescriptorReferenceType",
  "ReasonExitedDescriptorReferenceType",
  "ReasonNotTestedDescriptorReferenceType",
  "RecognitionTypeDescriptorReferenceType",
  "RelationDescriptorReferenceType",
  "RepeatIdentifierDescriptorReferenceType",
  "ReporterDescriptionDescriptorReferenceType",
  "ResidencyStatusDescriptorReferenceType",
  "ResponseIndicatorDescriptorReferenceType",
  "ResponsibilityDescriptorReferenceType",
  "RestraintEventReasonDescriptorReferenceType",
  "ResultDatatypeTypeDescriptorReferenceType",
  "RetestIndicatorDescriptorReferenceType",
  "SchoolCategoryDescriptorReferenceType",
  "SchoolChoiceImplementStatusDescriptorReferenceType",
  "SchoolFoodServiceProgramServiceDescriptorReferenceType",
  "SchoolTypeDescriptorReferenceType",
  "SectionCharacteristicDescriptorReferenceType",
  "SeparationDescriptorReferenceType",
  "SeparationReasonDescriptorReferenceType",
  "ServiceDescriptorReferenceType",
  "SexDescriptorReferenceType",
  "SourceSystemDescriptorReferenceType",
  "SpecialEducationProgramServiceDescriptorReferenceType",
  "SpecialEducationSettingDescriptorReferenceType",
  "StaffClassificationDescriptorReferenceType",
  "StaffIdentificationSystemDescriptorReferenceType",
  "StaffLeaveEventCategoryDescriptorReferenceType",
  "StateAbbreviationDescriptorReferenceType",
  "StudentCharacteristicDescriptorReferenceType",
  "StudentIdentificationSystemDescriptorReferenceType",
  "StudentParticipationCodeDescriptorReferenceType",
  "SurveyCategoryDescriptorReferenceType",
  "SurveyLevelDescriptorReferenceType",
  "TeachingCredentialBasisDescriptorReferenceType",
  "TeachingCredentialDescriptorReferenceType",
  "TechnicalSkillsAssessmentDescriptorReferenceType",
  "TelephoneNumberTypeDescriptorReferenceType",
  "TermDescriptorReferenceType",
  "TitleIPartAParticipantDescriptorReferenceType",
  "TitleIPartAProgramServiceDescriptorReferenceType",
  "TitleIPartASchoolDesignationDescriptorReferenceType",
  "TribalAffiliationDescriptorReferenceType",
  "VisaDescriptorReferenceType",
  "WeaponDescriptorReferenceType",
  "===== Common Types =====",
  "===== Enumerations and Enumerated Collections =====",
  "SchoolYearType",
  "===== String Simple Types =====",
  "AccountCodeCategory",
  "AccountCodeDescription",
  "AccountCodeNumber",
  "AccountIdentifier",
  "AccountName",
  "AchievementCategorySystem",
  "AchievementTitle",
  "AddressLine",
  "AlternateDayName",
  "ApartmentRoomSuiteNumber",
  "AssessmentFamily",
  "AssessmentForm",
  "AssessmentResponse",
  "AssessmentTitle",
  "AttendanceEventReason",
  "Author",
  "BellScheduleName",
  "BirthInternationalProvince",
  "BuildingSiteNumber",
  "CaseNumber",
  "CIPCode",
  "City",
  "ClassPeriodName",
  "ClassroomIdentificationCode",
  "CodeValue",
  "CohortDescription",
  "CohortIdentifier",
  "Comment",
  "CongressionalDistrict",
  "ContactRestrictions",
  "ContactTitle",
  "ContentIdentifier",
  "ContentStandardName",
  "ContentStandardTitle",
  "ContentStandardVersion",
  "ContentVersion",
  "Coordinate",
  "CorrectResponse",
  "CountyFIPSCode",
  "CourseCatalogURL",
  "CourseSetName",
  "CourseTitle",
  "CredentialCode",
  "CredentialEndorsement",
  "Criteria",
  "Department",
  "Description",
  "DescriptorReferenceType",
  "DesignatedBy",
  "DiagnosticStatement",
  "DiplomaDescription",
  "DisabilityDiagnosis",
  "DisciplineActionIdentifier",
  "DocumentTitle",
  "ElectronicMailAddress",
  "ExternalTerm",
  "FirstName",
  "FullName",
  "GenerationCodeSuffix",
  "GradebookEntryTitle",
  "GradeEarned",
  "GradeValueQualifier",
  "HonorDescription",
  "IdentificationCode",
  "IncidentIdentifier",
  "Indicator",
  "IndicatorName",
  "IssuerName",
  "ItemText",
  "LastSurname",
  "LearningResourceMetadataURI",
  "LearningStandardEquivalenceStrengthDescription",
  "LearningStandardId",
  "LicenseIdentifier",
  "LicensingOrganization",
  "LocalCourseCode",
  "MatrixElement",
  "MiddleName",
  "NameOfCounty",
  "NameOfInstitution",
  "Nomenclature",
  "Objective",
  "PersonalTitlePrefix",
  "PositionTitle",
  "PostalCode",
  "ProfileThumbnail",
  "ProgramId",
  "ProgramName",
  "Publisher",
  "Rating",
  "RatingOrganization",
  "RatingProgram",
  "RatingTitleType",
  "Reason",
  "RecognitionDescription",
  "ReporterName",
  "RequisitionNumber",
  "ResponseDescription",
  "ResponseValue",
  "RestraintEventIdentifier",
  "Result",
  "SectionIdentifier",
  "SectionName",
  "ServiceCategory",
  "ShortDescription",
  "Statement",
  "StreetNumberName",
  "SurveySectionTitle",
  "SurveyTitle",
  "TelephoneNumber",
  "TextResponse",
  "TextValue",
  "TimeInterval",
  "UniqueId",
  "URI",
  "WeekIdentifier",
  "Whereabouts",
  "===== Numeric Simple Types =====",
  "AgeAuthorizedToServe",
  "AssessmentVersion",
  "AttendanceEventDuration",
  "Capacity",
  "CreditConversion",
  "CreditsValue",
  "Currency",
  "DisciplineActionLength",
  "Dosage",
  "Duration",
  "EventDuration",
  "FullTimeEquivalency",
  "GPA",
  "HoursAbsent",
  "HoursPerWeek",
  "Learning",
  "MaxCompletionsForCredit",
  "MaxRawScore",
  "NumberOfDaysAbsent",
  "NumberOfDaysInAttendance",
  "NumberOfDaysTardy",
  "NumberOfParts",
  "NumberOfYears",
  "NumericGrade",
  "NumericResponse",
  "NumericValue",
  "OrderOfPriority",
  "Percent",
  "RawScoreResult",
  "SectionRating",
  "SequenceOfCourse",
  "TotalInstructionalDays",
  "TotalInstructionalTime",
]
`;

exports[`when generating xsd with extension and comparing it to data standard 3.1 authoritative artifacts should have complex types in the correct order 1`] = `
Array [
  "===== Domain Entities =====",
  "AcademicWeek",
  "Account",
  "AccountabilityRating",
  "AccountCode",
  "Actual",
  "Assessment",
  "AssessmentItem",
  "BellSchedule",
  "Budget",
  "Calendar",
  "CalendarDate",
  "ClassPeriod",
  "Cohort",
  "CommunityOrganization",
  "CommunityProvider",
  "CommunityProviderLicense",
  "CompetencyObjective",
  "ContractedStaff",
  "Course",
  "CourseOffering",
  "CourseTranscript",
  "Credential",
  "DisciplineAction",
  "DisciplineIncident",
  "EducationContent",
  "EducationOrganization",
  "EducationOrganizationNetwork",
  "EducationServiceCenter",
  "Grade",
  "GradebookEntry",
  "GradingPeriod",
  "GraduationPlan",
  "Intervention",
  "InterventionPrescription",
  "InterventionStudy",
  "LearningObjective",
  "LearningStandard",
  "LocalEducationAgency",
  "Location",
  "ObjectiveAssessment",
  "OpenStaffPosition",
  "Parent",
  "Payroll",
  "Person",
  "PostSecondaryEvent",
  "PostSecondaryInstitution",
  "Program",
  "ReportCard",
  "RestraintEvent",
  "School",
  "Section",
  "SectionAttendanceTakenEvent",
  "Session",
  "Staff",
  "StaffAbsenceEvent",
  "StaffLeave",
  "StateEducationAgency",
  "Student",
  "StudentAcademicRecord",
  "StudentAssessment",
  "StudentCompetencyObjective",
  "StudentGradebookEntry",
  "StudentInterventionAttendanceEvent",
  "StudentLearningObjective",
  "StudentProgramAttendanceEvent",
  "StudentSchoolAttendanceEvent",
  "StudentSectionAttendanceEvent",
  "Survey",
  "SurveyQuestion",
  "SurveyQuestionResponse",
  "SurveyResponse",
  "SurveySection",
  "SurveySectionResponse",
  "===== Descriptors =====",
  "AbsenceEventCategoryDescriptor",
  "AcademicHonorCategoryDescriptor",
  "AcademicSubjectDescriptor",
  "AccommodationDescriptor",
  "AccountClassificationDescriptor",
  "AchievementCategoryDescriptor",
  "AdditionalCreditTypeDescriptor",
  "AddressTypeDescriptor",
  "AdministrationEnvironmentDescriptor",
  "AdministrativeFundingControlDescriptor",
  "AssessmentCategoryDescriptor",
  "AssessmentIdentificationSystemDescriptor",
  "AssessmentItemCategoryDescriptor",
  "AssessmentItemResultDescriptor",
  "AssessmentPeriodDescriptor",
  "AssessmentReportingMethodDescriptor",
  "AttemptStatusDescriptor",
  "AttendanceEventCategoryDescriptor",
  "BehaviorDescriptor",
  "CalendarEventDescriptor",
  "CalendarTypeDescriptor",
  "CareerPathwayDescriptor",
  "CharterApprovalAgencyTypeDescriptor",
  "CharterStatusDescriptor",
  "CitizenshipStatusDescriptor",
  "ClassroomPositionDescriptor",
  "CohortScopeDescriptor",
  "CohortTypeDescriptor",
  "CohortYearTypeDescriptor",
  "CompetencyLevelDescriptor",
  "ContactTypeDescriptor",
  "ContentClassDescriptor",
  "ContinuationOfServicesReasonDescriptor",
  "CostRateDescriptor",
  "CountryDescriptor",
  "CourseAttemptResultDescriptor",
  "CourseDefinedByDescriptor",
  "CourseGPAApplicabilityDescriptor",
  "CourseIdentificationSystemDescriptor",
  "CourseLevelCharacteristicDescriptor",
  "CourseRepeatCodeDescriptor",
  "CredentialFieldDescriptor",
  "CredentialTypeDescriptor",
  "CreditCategoryDescriptor",
  "CreditTypeDescriptor",
  "CTEProgramServiceDescriptor",
  "CurriculumUsedDescriptor",
  "DeliveryMethodDescriptor",
  "DiagnosisDescriptor",
  "DiplomaLevelDescriptor",
  "DiplomaTypeDescriptor",
  "DisabilityDescriptor",
  "DisabilityDesignationDescriptor",
  "DisabilityDeterminationSourceTypeDescriptor",
  "DisciplineActionLengthDifferenceReasonDescriptor",
  "DisciplineDescriptor",
  "DisciplineIncidentParticipationCodeDescriptor",
  "EducationalEnvironmentDescriptor",
  "EducationOrganizationCategoryDescriptor",
  "EducationOrganizationIdentificationSystemDescriptor",
  "EducationPlanDescriptor",
  "ElectronicMailTypeDescriptor",
  "EmploymentStatusDescriptor",
  "EntryGradeLevelReasonDescriptor",
  "EntryTypeDescriptor",
  "EventCircumstanceDescriptor",
  "ExitWithdrawTypeDescriptor",
  "GradebookEntryTypeDescriptor",
  "GradeLevelDescriptor",
  "GradePointAverageTypeDescriptor",
  "GradeTypeDescriptor",
  "GradingPeriodDescriptor",
  "GraduationPlanTypeDescriptor",
  "GunFreeSchoolsActReportingStatusDescriptor",
  "HomelessPrimaryNighttimeResidenceDescriptor",
  "HomelessProgramServiceDescriptor",
  "IdentificationDocumentUseDescriptor",
  "IncidentLocationDescriptor",
  "IndicatorDescriptor",
  "IndicatorGroupDescriptor",
  "IndicatorLevelDescriptor",
  "InstitutionTelephoneNumberTypeDescriptor",
  "InteractivityStyleDescriptor",
  "InternetAccessDescriptor",
  "InterventionClassDescriptor",
  "InterventionEffectivenessRatingDescriptor",
  "LanguageDescriptor",
  "LanguageInstructionProgramServiceDescriptor",
  "LanguageUseDescriptor",
  "LearningStandardCategoryDescriptor",
  "LearningStandardEquivalenceStrengthDescriptor",
  "LearningStandardScopeDescriptor",
  "LevelOfEducationDescriptor",
  "LicenseStatusDescriptor",
  "LicenseTypeDescriptor",
  "LimitedEnglishProficiencyDescriptor",
  "LocaleDescriptor",
  "LocalEducationAgencyCategoryDescriptor",
  "MagnetSpecialProgramEmphasisSchoolDescriptor",
  "MediumOfInstructionDescriptor",
  "MethodCreditEarnedDescriptor",
  "MigrantEducationProgramServiceDescriptor",
  "MonitoredDescriptor",
  "NeglectedOrDelinquentProgramDescriptor",
  "NeglectedOrDelinquentProgramServiceDescriptor",
  "NetworkPurposeDescriptor",
  "OldEthnicityDescriptor",
  "OperationalStatusDescriptor",
  "OtherNameTypeDescriptor",
  "ParticipationDescriptor",
  "ParticipationStatusDescriptor",
  "PerformanceBaseConversionDescriptor",
  "PerformanceLevelDescriptor",
  "PersonalInformationVerificationDescriptor",
  "PlatformTypeDescriptor",
  "PopulationServedDescriptor",
  "PostingResultDescriptor",
  "PostSecondaryEventCategoryDescriptor",
  "PostSecondaryInstitutionLevelDescriptor",
  "ProficiencyDescriptor",
  "ProgramAssignmentDescriptor",
  "ProgramCharacteristicDescriptor",
  "ProgramSponsorDescriptor",
  "ProgramTypeDescriptor",
  "ProgressDescriptor",
  "ProgressLevelDescriptor",
  "ProviderCategoryDescriptor",
  "ProviderProfitabilityDescriptor",
  "ProviderStatusDescriptor",
  "PublicationStatusDescriptor",
  "QuestionFormDescriptor",
  "RaceDescriptor",
  "ReasonExitedDescriptor",
  "ReasonNotTestedDescriptor",
  "RecognitionTypeDescriptor",
  "RelationDescriptor",
  "RepeatIdentifierDescriptor",
  "ReporterDescriptionDescriptor",
  "ResidencyStatusDescriptor",
  "ResponseIndicatorDescriptor",
  "ResponsibilityDescriptor",
  "RestraintEventReasonDescriptor",
  "ResultDatatypeTypeDescriptor",
  "RetestIndicatorDescriptor",
  "SchoolCategoryDescriptor",
  "SchoolChoiceImplementStatusDescriptor",
  "SchoolFoodServiceProgramServiceDescriptor",
  "SchoolTypeDescriptor",
  "SectionCharacteristicDescriptor",
  "SeparationDescriptor",
  "SeparationReasonDescriptor",
  "ServiceDescriptor",
  "SexDescriptor",
  "SourceSystemDescriptor",
  "SpecialEducationProgramServiceDescriptor",
  "SpecialEducationSettingDescriptor",
  "StaffClassificationDescriptor",
  "StaffIdentificationSystemDescriptor",
  "StaffLeaveEventCategoryDescriptor",
  "StateAbbreviationDescriptor",
  "StudentCharacteristicDescriptor",
  "StudentIdentificationSystemDescriptor",
  "StudentParticipationCodeDescriptor",
  "SurveyCategoryDescriptor",
  "SurveyLevelDescriptor",
  "TeachingCredentialBasisDescriptor",
  "TeachingCredentialDescriptor",
  "TechnicalSkillsAssessmentDescriptor",
  "TelephoneNumberTypeDescriptor",
  "TermDescriptor",
  "TitleIPartAParticipantDescriptor",
  "TitleIPartAProgramServiceDescriptor",
  "TitleIPartASchoolDesignationDescriptor",
  "TribalAffiliationDescriptor",
  "VisaDescriptor",
  "WeaponDescriptor",
  "===== Associations =====",
  "EducationOrganizationInterventionPrescriptionAssociation",
  "EducationOrganizationNetworkAssociation",
  "EducationOrganizationPeerAssociation",
  "FeederSchoolAssociation",
  "GeneralStudentProgramAssociation",
  "LearningStandardEquivalenceAssociation",
  "StaffCohortAssociation",
  "StaffDisciplineIncidentAssociation",
  "StaffEducationOrganizationAssignmentAssociation",
  "StaffEducationOrganizationContactAssociation",
  "StaffEducationOrganizationEmploymentAssociation",
  "StaffProgramAssociation",
  "StaffSchoolAssociation",
  "StaffSectionAssociation",
  "StudentCohortAssociation",
  "StudentCTEProgramAssociation",
  "StudentDisciplineIncidentAssociation",
  "StudentEducationOrganizationAssociation",
  "StudentEducationOrganizationResponsibilityAssociation",
  "StudentHomelessProgramAssociation",
  "StudentInterventionAssociation",
  "StudentLanguageInstructionProgramAssociation",
  "StudentMigrantEducationProgramAssociation",
  "StudentNeglectedOrDelinquentProgramAssociation",
  "StudentParentAssociation",
  "StudentProgramAssociation",
  "StudentSchoolAssociation",
  "StudentSchoolFoodServiceProgramAssociation",
  "StudentSectionAssociation",
  "StudentSpecialEducationProgramAssociation",
  "StudentTitleIPartAProgramAssociation",
  "SurveyCourseAssociation",
  "SurveyProgramAssociation",
  "SurveyResponseEducationOrganizationTargetAssociation",
  "SurveyResponseStaffTargetAssociation",
  "SurveySectionAssociation",
  "SurveySectionResponseEducationOrganizationTargetAssociation",
  "SurveySectionResponseStaffTargetAssociation",
  "===== Base Types (borrowed from NEIM standards) =====",
  "ComplexObjectType",
  "DescriptorType",
  "ReferenceType",
  "===== Extended Reference Types =====",
  "AcademicWeekIdentityType",
  "AcademicWeekReferenceType",
  "AccountabilityRatingIdentityType",
  "AccountabilityRatingReferenceType",
  "AccountCodeIdentityType",
  "AccountCodeReferenceType",
  "AccountIdentityType",
  "AccountReferenceType",
  "ActualIdentityType",
  "ActualReferenceType",
  "AssessmentIdentityType",
  "AssessmentItemIdentityType",
  "AssessmentItemReferenceType",
  "AssessmentLookupType",
  "AssessmentReferenceType",
  "BellScheduleIdentityType",
  "BellScheduleReferenceType",
  "BudgetIdentityType",
  "BudgetReferenceType",
  "CalendarDateIdentityType",
  "CalendarDateReferenceType",
  "CalendarIdentityType",
  "CalendarReferenceType",
  "ClassPeriodIdentityType",
  "ClassPeriodReferenceType",
  "CohortIdentityType",
  "CohortReferenceType",
  "CommunityOrganizationIdentityType",
  "CommunityOrganizationReferenceType",
  "CommunityProviderIdentityType",
  "CommunityProviderLicenseIdentityType",
  "CommunityProviderLicenseReferenceType",
  "CommunityProviderReferenceType",
  "CompetencyObjectiveIdentityType",
  "CompetencyObjectiveReferenceType",
  "ContractedStaffIdentityType",
  "ContractedStaffReferenceType",
  "CourseIdentityType",
  "CourseLookupType",
  "CourseOfferingIdentityType",
  "CourseOfferingReferenceType",
  "CourseReferenceType",
  "CourseTranscriptIdentityType",
  "CourseTranscriptReferenceType",
  "CredentialIdentityType",
  "CredentialReferenceType",
  "DisciplineActionIdentityType",
  "DisciplineActionReferenceType",
  "DisciplineIncidentIdentityType",
  "DisciplineIncidentReferenceType",
  "EducationContentIdentityType",
  "EducationContentReferenceType",
  "EducationOrganizationIdentityType",
  "EducationOrganizationInterventionPrescriptionAssociationIdentityType",
  "EducationOrganizationInterventionPrescriptionAssociationReferenceType",
  "EducationOrganizationLookupType",
  "EducationOrganizationNetworkAssociationIdentityType",
  "EducationOrganizationNetworkAssociationReferenceType",
  "EducationOrganizationNetworkIdentityType",
  "EducationOrganizationNetworkLookupType",
  "EducationOrganizationNetworkReferenceType",
  "EducationOrganizationPeerAssociationIdentityType",
  "EducationOrganizationPeerAssociationReferenceType",
  "EducationOrganizationReferenceType",
  "EducationServiceCenterIdentityType",
  "EducationServiceCenterLookupType",
  "EducationServiceCenterReferenceType",
  "FeederSchoolAssociationIdentityType",
  "FeederSchoolAssociationReferenceType",
  "GeneralStudentProgramAssociationIdentityType",
  "GeneralStudentProgramAssociationReferenceType",
  "GradebookEntryIdentityType",
  "GradebookEntryLookupType",
  "GradebookEntryReferenceType",
  "GradeIdentityType",
  "GradeReferenceType",
  "GradingPeriodIdentityType",
  "GradingPeriodReferenceType",
  "GraduationPlanIdentityType",
  "GraduationPlanReferenceType",
  "InterventionIdentityType",
  "InterventionPrescriptionIdentityType",
  "InterventionPrescriptionReferenceType",
  "InterventionReferenceType",
  "InterventionStudyIdentityType",
  "InterventionStudyReferenceType",
  "LearningObjectiveIdentityType",
  "LearningObjectiveReferenceType",
  "LearningStandardEquivalenceAssociationIdentityType",
  "LearningStandardEquivalenceAssociationReferenceType",
  "LearningStandardIdentityType",
  "LearningStandardLookupType",
  "LearningStandardReferenceType",
  "LocalEducationAgencyIdentityType",
  "LocalEducationAgencyLookupType",
  "LocalEducationAgencyReferenceType",
  "LocationIdentityType",
  "LocationReferenceType",
  "ObjectiveAssessmentIdentityType",
  "ObjectiveAssessmentReferenceType",
  "OpenStaffPositionIdentityType",
  "OpenStaffPositionReferenceType",
  "ParentIdentityType",
  "ParentLookupType",
  "ParentReferenceType",
  "PayrollIdentityType",
  "PayrollReferenceType",
  "PersonIdentityType",
  "PersonReferenceType",
  "PostSecondaryEventIdentityType",
  "PostSecondaryEventReferenceType",
  "PostSecondaryInstitutionIdentityType",
  "PostSecondaryInstitutionReferenceType",
  "ProgramIdentityType",
  "ProgramLookupType",
  "ProgramReferenceType",
  "ReportCardIdentityType",
  "ReportCardReferenceType",
  "RestraintEventIdentityType",
  "RestraintEventReferenceType",
  "SchoolIdentityType",
  "SchoolLookupType",
  "SchoolReferenceType",
  "SectionAttendanceTakenEventIdentityType",
  "SectionAttendanceTakenEventReferenceType",
  "SectionIdentityType",
  "SectionLookupType",
  "SectionReferenceType",
  "SessionIdentityType",
  "SessionLookupType",
  "SessionReferenceType",
  "StaffAbsenceEventIdentityType",
  "StaffAbsenceEventReferenceType",
  "StaffCohortAssociationIdentityType",
  "StaffCohortAssociationReferenceType",
  "StaffDisciplineIncidentAssociationIdentityType",
  "StaffDisciplineIncidentAssociationReferenceType",
  "StaffEducationOrganizationAssignmentAssociationIdentityType",
  "StaffEducationOrganizationAssignmentAssociationReferenceType",
  "StaffEducationOrganizationContactAssociationIdentityType",
  "StaffEducationOrganizationContactAssociationReferenceType",
  "StaffEducationOrganizationEmploymentAssociationIdentityType",
  "StaffEducationOrganizationEmploymentAssociationReferenceType",
  "StaffIdentityType",
  "StaffLeaveIdentityType",
  "StaffLeaveReferenceType",
  "StaffLookupType",
  "StaffProgramAssociationIdentityType",
  "StaffProgramAssociationReferenceType",
  "StaffReferenceType",
  "StaffSchoolAssociationIdentityType",
  "StaffSchoolAssociationReferenceType",
  "StaffSectionAssociationIdentityType",
  "StaffSectionAssociationReferenceType",
  "StateEducationAgencyIdentityType",
  "StateEducationAgencyLookupType",
  "StateEducationAgencyReferenceType",
  "StudentAcademicRecordIdentityType",
  "StudentAcademicRecordReferenceType",
  "StudentAssessmentIdentityType",
  "StudentAssessmentReferenceType",
  "StudentCohortAssociationIdentityType",
  "StudentCohortAssociationReferenceType",
  "StudentCompetencyObjectiveIdentityType",
  "StudentCompetencyObjectiveReferenceType",
  "StudentCTEProgramAssociationIdentityType",
  "StudentCTEProgramAssociationReferenceType",
  "StudentDisciplineIncidentAssociationIdentityType",
  "StudentDisciplineIncidentAssociationReferenceType",
  "StudentEducationOrganizationAssociationIdentityType",
  "StudentEducationOrganizationAssociationReferenceType",
  "StudentEducationOrganizationResponsibilityAssociationIdentityType",
  "StudentEducationOrganizationResponsibilityAssociationReferenceType",
  "StudentGradebookEntryIdentityType",
  "StudentGradebookEntryReferenceType",
  "StudentHomelessProgramAssociationIdentityType",
  "StudentHomelessProgramAssociationReferenceType",
  "StudentIdentityType",
  "StudentInterventionAssociationIdentityType",
  "StudentInterventionAssociationReferenceType",
  "StudentInterventionAttendanceEventIdentityType",
  "StudentInterventionAttendanceEventReferenceType",
  "StudentLanguageInstructionProgramAssociationIdentityType",
  "StudentLanguageInstructionProgramAssociationReferenceType",
  "StudentLearningObjectiveIdentityType",
  "StudentLearningObjectiveReferenceType",
  "StudentLookupType",
  "StudentMigrantEducationProgramAssociationIdentityType",
  "StudentMigrantEducationProgramAssociationReferenceType",
  "StudentNeglectedOrDelinquentProgramAssociationIdentityType",
  "StudentNeglectedOrDelinquentProgramAssociationReferenceType",
  "StudentParentAssociationIdentityType",
  "StudentParentAssociationReferenceType",
  "StudentProgramAssociationIdentityType",
  "StudentProgramAssociationReferenceType",
  "StudentProgramAttendanceEventIdentityType",
  "StudentProgramAttendanceEventReferenceType",
  "StudentReferenceType",
  "StudentSchoolAssociationIdentityType",
  "StudentSchoolAssociationReferenceType",
  "StudentSchoolAttendanceEventIdentityType",
  "StudentSchoolAttendanceEventReferenceType",
  "StudentSchoolFoodServiceProgramAssociationIdentityType",
  "StudentSchoolFoodServiceProgramAssociationReferenceType",
  "StudentSectionAssociationIdentityType",
  "StudentSectionAssociationReferenceType",
  "StudentSectionAttendanceEventIdentityType",
  "StudentSectionAttendanceEventReferenceType",
  "StudentSpecialEducationProgramAssociationIdentityType",
  "StudentSpecialEducationProgramAssociationReferenceType",
  "StudentTitleIPartAProgramAssociationIdentityType",
  "StudentTitleIPartAProgramAssociationReferenceType",
  "SurveyCourseAssociationIdentityType",
  "SurveyCourseAssociationReferenceType",
  "SurveyIdentityType",
  "SurveyProgramAssociationIdentityType",
  "SurveyProgramAssociationReferenceType",
  "SurveyQuestionIdentityType",
  "SurveyQuestionReferenceType",
  "SurveyQuestionResponseIdentityType",
  "SurveyQuestionResponseReferenceType",
  "SurveyReferenceType",
  "SurveyResponseEducationOrganizationTargetAssociationIdentityType",
  "SurveyResponseEducationOrganizationTargetAssociationReferenceType",
  "SurveyResponseIdentityType",
  "SurveyResponseReferenceType",
  "SurveyResponseStaffTargetAssociationIdentityType",
  "SurveyResponseStaffTargetAssociationReferenceType",
  "SurveySectionAssociationIdentityType",
  "SurveySectionAssociationReferenceType",
  "SurveySectionIdentityType",
  "SurveySectionReferenceType",
  "SurveySectionResponseEducationOrganizationTargetAssociationIdentityType",
  "SurveySectionResponseEducationOrganizationTargetAssociationReferenceType",
  "SurveySectionResponseIdentityType",
  "SurveySectionResponseReferenceType",
  "SurveySectionResponseStaffTargetAssociationIdentityType",
  "SurveySectionResponseStaffTargetAssociationReferenceType",
  "===== Extended Descriptor Reference Types =====",
  "===== Common Types =====",
  "AcademicHonor",
  "Achievement",
  "AdditionalCredits",
  "Address",
  "AssessmentIdentificationCode",
  "AssessmentPerformanceLevel",
  "AssessmentPeriod",
  "AssessmentScore",
  "AttendanceEvent",
  "Behavior",
  "BirthData",
  "Citizenship",
  "ClassRanking",
  "CohortYear",
  "ContentStandard",
  "CourseIdentificationCode",
  "Credits",
  "CreditsByCourse",
  "CreditsByCreditCategory",
  "CreditsBySubject",
  "CTEProgram",
  "CTEProgramService",
  "Diploma",
  "Disability",
  "DisciplineIncidentExternalParticipant",
  "EducationContentSource",
  "EducationOrganizationIdentificationCode",
  "EducationOrganizationIndicator",
  "ElectronicMail",
  "EmploymentPeriod",
  "EnglishLanguageProficiencyAssessment",
  "GradePointAverage",
  "HomelessProgramService",
  "IdentificationDocument",
  "InstitutionTelephone",
  "InternationalAddress",
  "InterventionEffectiveness",
  "Language",
  "LanguageInstructionProgramService",
  "LearningResource",
  "LearningStandardGrade",
  "LearningStandardIdentificationCode",
  "License",
  "LocalEducationAgencyAccountability",
  "LocalEducationAgencyFederalFunds",
  "Matrix",
  "MeetingTime",
  "MigrantEducationProgramService",
  "Name",
  "NeglectedOrDelinquentProgramService",
  "OtherName",
  "ParticipationStatus",
  "PerformanceLevel",
  "Period",
  "PossibleResponse",
  "ProgramParticipation",
  "Recognition",
  "RequiredAssessment",
  "ResponseChoice",
  "SchoolFoodServiceProgramService",
  "ScoreResult",
  "Service",
  "ServiceProvider",
  "SpecialEducationProgramService",
  "StaffIdentificationCode",
  "StateEducationAgencyAccountability",
  "StateEducationAgencyFederalFunds",
  "StudentAssessmentItem",
  "StudentCharacteristic",
  "StudentIdentificationCode",
  "StudentIndicator",
  "StudentObjectiveAssessment",
  "SurveyQuestionMatrixElementResponse",
  "SurveyQuestionResponseValue",
  "Telephone",
  "TitleIPartAProgramService",
  "===== Enumerations and Enumerated Collections =====",
  "===== String Simple Types =====",
  "===== Numeric Simple Types =====",
  "===== Domain Entities =====",
  "EdFiXFinance-BalanceSheetDimension",
  "EdFiXFinance-ChartOfAccount",
  "EdFiXFinance-FunctionDimension",
  "EdFiXFinance-FundDimension",
  "EdFiXFinance-LocalAccount",
  "EdFiXFinance-LocalActual",
  "EdFiXFinance-LocalBudget",
  "EdFiXFinance-ObjectDimension",
  "EdFiXFinance-OperationalUnitDimension",
  "EdFiXFinance-ProgramDimension",
  "EdFiXFinance-ProjectDimension",
  "EdFiXFinance-SourceDimension",
  "===== Descriptors =====",
  "EdFiXFinance-AccountTypeDescriptor",
  "EdFiXFinance-FinancialCollectionDescriptor",
  "EdFiXFinance-ReportingTagDescriptor",
  "===== Associations =====",
  "===== Extended Reference Types =====",
  "EdFiXFinance-BalanceSheetDimensionIdentityType",
  "EdFiXFinance-BalanceSheetDimensionReferenceType",
  "EdFiXFinance-ChartOfAccountIdentityType",
  "EdFiXFinance-ChartOfAccountReferenceType",
  "EdFiXFinance-FunctionDimensionIdentityType",
  "EdFiXFinance-FunctionDimensionReferenceType",
  "EdFiXFinance-FundDimensionIdentityType",
  "EdFiXFinance-FundDimensionReferenceType",
  "EdFiXFinance-LocalAccountIdentityType",
  "EdFiXFinance-LocalAccountReferenceType",
  "EdFiXFinance-LocalActualIdentityType",
  "EdFiXFinance-LocalActualReferenceType",
  "EdFiXFinance-LocalBudgetIdentityType",
  "EdFiXFinance-LocalBudgetReferenceType",
  "EdFiXFinance-ObjectDimensionIdentityType",
  "EdFiXFinance-ObjectDimensionReferenceType",
  "EdFiXFinance-OperationalUnitDimensionIdentityType",
  "EdFiXFinance-OperationalUnitDimensionReferenceType",
  "EdFiXFinance-ProgramDimensionIdentityType",
  "EdFiXFinance-ProgramDimensionReferenceType",
  "EdFiXFinance-ProjectDimensionIdentityType",
  "EdFiXFinance-ProjectDimensionReferenceType",
  "EdFiXFinance-SourceDimensionIdentityType",
  "EdFiXFinance-SourceDimensionReferenceType",
  "===== Extended Descriptor Reference Types =====",
  "===== Common Types =====",
  "EdFiXFinance-ReportingTag",
  "===== Enumerations and Enumerated Collections =====",
  "===== String Simple Types =====",
  "===== Numeric Simple Types =====",
]
`;

exports[`when generating xsd with extension and comparing it to data standard 3.1 authoritative artifacts should have core with no differences 1`] = `
" 1 file changed, 2575 insertions(+), 181 deletions(-)
"
`;

exports[`when generating xsd with extension and comparing it to data standard 3.1 authoritative artifacts should have schema annotation with no differences 1`] = `""`;

exports[`when generating xsd with extension and comparing it to data standard 3.1 authoritative artifacts should have simple types in the correct order 1`] = `
Array [
  "===== Domain Entities =====",
  "===== Descriptors =====",
  "===== Associations =====",
  "===== Base Types (borrowed from NEIM standards) =====",
  "===== Extended Reference Types =====",
  "===== Extended Descriptor Reference Types =====",
  "AbsenceEventCategoryDescriptorReferenceType",
  "AcademicHonorCategoryDescriptorReferenceType",
  "AcademicSubjectDescriptorReferenceType",
  "AccommodationDescriptorReferenceType",
  "AccountClassificationDescriptorReferenceType",
  "AchievementCategoryDescriptorReferenceType",
  "AdditionalCreditTypeDescriptorReferenceType",
  "AddressTypeDescriptorReferenceType",
  "AdministrationEnvironmentDescriptorReferenceType",
  "AdministrativeFundingControlDescriptorReferenceType",
  "AssessmentCategoryDescriptorReferenceType",
  "AssessmentIdentificationSystemDescriptorReferenceType",
  "AssessmentItemCategoryDescriptorReferenceType",
  "AssessmentItemResultDescriptorReferenceType",
  "AssessmentPeriodDescriptorReferenceType",
  "AssessmentReportingMethodDescriptorReferenceType",
  "AttemptStatusDescriptorReferenceType",
  "AttendanceEventCategoryDescriptorReferenceType",
  "BehaviorDescriptorReferenceType",
  "CalendarEventDescriptorReferenceType",
  "CalendarTypeDescriptorReferenceType",
  "CareerPathwayDescriptorReferenceType",
  "CharterApprovalAgencyTypeDescriptorReferenceType",
  "CharterStatusDescriptorReferenceType",
  "CitizenshipStatusDescriptorReferenceType",
  "ClassroomPositionDescriptorReferenceType",
  "CohortScopeDescriptorReferenceType",
  "CohortTypeDescriptorReferenceType",
  "CohortYearTypeDescriptorReferenceType",
  "CompetencyLevelDescriptorReferenceType",
  "ContactTypeDescriptorReferenceType",
  "ContentClassDescriptorReferenceType",
  "ContinuationOfServicesReasonDescriptorReferenceType",
  "CostRateDescriptorReferenceType",
  "CountryDescriptorReferenceType",
  "CourseAttemptResultDescriptorReferenceType",
  "CourseDefinedByDescriptorReferenceType",
  "CourseGPAApplicabilityDescriptorReferenceType",
  "CourseIdentificationSystemDescriptorReferenceType",
  "CourseLevelCharacteristicDescriptorReferenceType",
  "CourseRepeatCodeDescriptorReferenceType",
  "CredentialFieldDescriptorReferenceType",
  "CredentialTypeDescriptorReferenceType",
  "CreditCategoryDescriptorReferenceType",
  "CreditTypeDescriptorReferenceType",
  "CTEProgramServiceDescriptorReferenceType",
  "CurriculumUsedDescriptorReferenceType",
  "DeliveryMethodDescriptorReferenceType",
  "DiagnosisDescriptorReferenceType",
  "DiplomaLevelDescriptorReferenceType",
  "DiplomaTypeDescriptorReferenceType",
  "DisabilityDescriptorReferenceType",
  "DisabilityDesignationDescriptorReferenceType",
  "DisabilityDeterminationSourceTypeDescriptorReferenceType",
  "DisciplineActionLengthDifferenceReasonDescriptorReferenceType",
  "DisciplineDescriptorReferenceType",
  "DisciplineIncidentParticipationCodeDescriptorReferenceType",
  "EducationalEnvironmentDescriptorReferenceType",
  "EducationOrganizationCategoryDescriptorReferenceType",
  "EducationOrganizationIdentificationSystemDescriptorReferenceType",
  "EducationPlanDescriptorReferenceType",
  "ElectronicMailTypeDescriptorReferenceType",
  "EmploymentStatusDescriptorReferenceType",
  "EntryGradeLevelReasonDescriptorReferenceType",
  "EntryTypeDescriptorReferenceType",
  "EventCircumstanceDescriptorReferenceType",
  "ExitWithdrawTypeDescriptorReferenceType",
  "GradebookEntryTypeDescriptorReferenceType",
  "GradeLevelDescriptorReferenceType",
  "GradePointAverageTypeDescriptorReferenceType",
  "GradeTypeDescriptorReferenceType",
  "GradingPeriodDescriptorReferenceType",
  "GraduationPlanTypeDescriptorReferenceType",
  "GunFreeSchoolsActReportingStatusDescriptorReferenceType",
  "HomelessPrimaryNighttimeResidenceDescriptorReferenceType",
  "HomelessProgramServiceDescriptorReferenceType",
  "IdentificationDocumentUseDescriptorReferenceType",
  "IncidentLocationDescriptorReferenceType",
  "IndicatorDescriptorReferenceType",
  "IndicatorGroupDescriptorReferenceType",
  "IndicatorLevelDescriptorReferenceType",
  "InstitutionTelephoneNumberTypeDescriptorReferenceType",
  "InteractivityStyleDescriptorReferenceType",
  "InternetAccessDescriptorReferenceType",
  "InterventionClassDescriptorReferenceType",
  "InterventionEffectivenessRatingDescriptorReferenceType",
  "LanguageDescriptorReferenceType",
  "LanguageInstructionProgramServiceDescriptorReferenceType",
  "LanguageUseDescriptorReferenceType",
  "LearningStandardCategoryDescriptorReferenceType",
  "LearningStandardEquivalenceStrengthDescriptorReferenceType",
  "LearningStandardScopeDescriptorReferenceType",
  "LevelOfEducationDescriptorReferenceType",
  "LicenseStatusDescriptorReferenceType",
  "LicenseTypeDescriptorReferenceType",
  "LimitedEnglishProficiencyDescriptorReferenceType",
  "LocaleDescriptorReferenceType",
  "LocalEducationAgencyCategoryDescriptorReferenceType",
  "MagnetSpecialProgramEmphasisSchoolDescriptorReferenceType",
  "MediumOfInstructionDescriptorReferenceType",
  "MethodCreditEarnedDescriptorReferenceType",
  "MigrantEducationProgramServiceDescriptorReferenceType",
  "MonitoredDescriptorReferenceType",
  "NeglectedOrDelinquentProgramDescriptorReferenceType",
  "NeglectedOrDelinquentProgramServiceDescriptorReferenceType",
  "NetworkPurposeDescriptorReferenceType",
  "OldEthnicityDescriptorReferenceType",
  "OperationalStatusDescriptorReferenceType",
  "OtherNameTypeDescriptorReferenceType",
  "ParticipationDescriptorReferenceType",
  "ParticipationStatusDescriptorReferenceType",
  "PerformanceBaseConversionDescriptorReferenceType",
  "PerformanceLevelDescriptorReferenceType",
  "PersonalInformationVerificationDescriptorReferenceType",
  "PlatformTypeDescriptorReferenceType",
  "PopulationServedDescriptorReferenceType",
  "PostingResultDescriptorReferenceType",
  "PostSecondaryEventCategoryDescriptorReferenceType",
  "PostSecondaryInstitutionLevelDescriptorReferenceType",
  "ProficiencyDescriptorReferenceType",
  "ProgramAssignmentDescriptorReferenceType",
  "ProgramCharacteristicDescriptorReferenceType",
  "ProgramSponsorDescriptorReferenceType",
  "ProgramTypeDescriptorReferenceType",
  "ProgressDescriptorReferenceType",
  "ProgressLevelDescriptorReferenceType",
  "ProviderCategoryDescriptorReferenceType",
  "ProviderProfitabilityDescriptorReferenceType",
  "ProviderStatusDescriptorReferenceType",
  "PublicationStatusDescriptorReferenceType",
  "QuestionFormDescriptorReferenceType",
  "RaceDescriptorReferenceType",
  "ReasonExitedDescriptorReferenceType",
  "ReasonNotTestedDescriptorReferenceType",
  "RecognitionTypeDescriptorReferenceType",
  "RelationDescriptorReferenceType",
  "RepeatIdentifierDescriptorReferenceType",
  "ReporterDescriptionDescriptorReferenceType",
  "ResidencyStatusDescriptorReferenceType",
  "ResponseIndicatorDescriptorReferenceType",
  "ResponsibilityDescriptorReferenceType",
  "RestraintEventReasonDescriptorReferenceType",
  "ResultDatatypeTypeDescriptorReferenceType",
  "RetestIndicatorDescriptorReferenceType",
  "SchoolCategoryDescriptorReferenceType",
  "SchoolChoiceImplementStatusDescriptorReferenceType",
  "SchoolFoodServiceProgramServiceDescriptorReferenceType",
  "SchoolTypeDescriptorReferenceType",
  "SectionCharacteristicDescriptorReferenceType",
  "SeparationDescriptorReferenceType",
  "SeparationReasonDescriptorReferenceType",
  "ServiceDescriptorReferenceType",
  "SexDescriptorReferenceType",
  "SourceSystemDescriptorReferenceType",
  "SpecialEducationProgramServiceDescriptorReferenceType",
  "SpecialEducationSettingDescriptorReferenceType",
  "StaffClassificationDescriptorReferenceType",
  "StaffIdentificationSystemDescriptorReferenceType",
  "StaffLeaveEventCategoryDescriptorReferenceType",
  "StateAbbreviationDescriptorReferenceType",
  "StudentCharacteristicDescriptorReferenceType",
  "StudentIdentificationSystemDescriptorReferenceType",
  "StudentParticipationCodeDescriptorReferenceType",
  "SurveyCategoryDescriptorReferenceType",
  "SurveyLevelDescriptorReferenceType",
  "TeachingCredentialBasisDescriptorReferenceType",
  "TeachingCredentialDescriptorReferenceType",
  "TechnicalSkillsAssessmentDescriptorReferenceType",
  "TelephoneNumberTypeDescriptorReferenceType",
  "TermDescriptorReferenceType",
  "TitleIPartAParticipantDescriptorReferenceType",
  "TitleIPartAProgramServiceDescriptorReferenceType",
  "TitleIPartASchoolDesignationDescriptorReferenceType",
  "TribalAffiliationDescriptorReferenceType",
  "VisaDescriptorReferenceType",
  "WeaponDescriptorReferenceType",
  "===== Common Types =====",
  "===== Enumerations and Enumerated Collections =====",
  "SchoolYearType",
  "===== String Simple Types =====",
  "AccountCodeCategory",
  "AccountCodeDescription",
  "AccountCodeNumber",
  "AccountIdentifier",
  "AccountName",
  "AchievementCategorySystem",
  "AchievementTitle",
  "AddressLine",
  "AlternateDayName",
  "ApartmentRoomSuiteNumber",
  "AssessmentFamily",
  "AssessmentForm",
  "AssessmentResponse",
  "AssessmentTitle",
  "AttendanceEventReason",
  "Author",
  "BellScheduleName",
  "BirthInternationalProvince",
  "BuildingSiteNumber",
  "CaseNumber",
  "CIPCode",
  "City",
  "ClassPeriodName",
  "ClassroomIdentificationCode",
  "CodeValue",
  "CohortDescription",
  "CohortIdentifier",
  "Comment",
  "CongressionalDistrict",
  "ContactRestrictions",
  "ContactTitle",
  "ContentIdentifier",
  "ContentStandardName",
  "ContentStandardTitle",
  "ContentStandardVersion",
  "ContentVersion",
  "Coordinate",
  "CorrectResponse",
  "CountyFIPSCode",
  "CourseCatalogURL",
  "CourseSetName",
  "CourseTitle",
  "CredentialCode",
  "CredentialEndorsement",
  "Criteria",
  "Department",
  "Description",
  "DescriptorReferenceType",
  "DesignatedBy",
  "DiagnosticStatement",
  "DiplomaDescription",
  "DisabilityDiagnosis",
  "DisciplineActionIdentifier",
  "DocumentTitle",
  "ElectronicMailAddress",
  "ExternalTerm",
  "FirstName",
  "FullName",
  "GenerationCodeSuffix",
  "GradebookEntryTitle",
  "GradeEarned",
  "GradeValueQualifier",
  "HonorDescription",
  "IdentificationCode",
  "IncidentIdentifier",
  "Indicator",
  "IndicatorName",
  "IssuerName",
  "ItemText",
  "LastSurname",
  "LearningResourceMetadataURI",
  "LearningStandardEquivalenceStrengthDescription",
  "LearningStandardId",
  "LicenseIdentifier",
  "LicensingOrganization",
  "LocalCourseCode",
  "MatrixElement",
  "MiddleName",
  "NameOfCounty",
  "NameOfInstitution",
  "Nomenclature",
  "Objective",
  "PersonalTitlePrefix",
  "PositionTitle",
  "PostalCode",
  "ProfileThumbnail",
  "ProgramId",
  "ProgramName",
  "Publisher",
  "Rating",
  "RatingOrganization",
  "RatingProgram",
  "RatingTitleType",
  "Reason",
  "RecognitionDescription",
  "ReporterName",
  "RequisitionNumber",
  "ResponseDescription",
  "ResponseValue",
  "RestraintEventIdentifier",
  "Result",
  "SectionIdentifier",
  "SectionName",
  "ServiceCategory",
  "ShortDescription",
  "Statement",
  "StreetNumberName",
  "SurveySectionTitle",
  "SurveyTitle",
  "TelephoneNumber",
  "TextResponse",
  "TextValue",
  "TimeInterval",
  "UniqueId",
  "URI",
  "WeekIdentifier",
  "Whereabouts",
  "===== Numeric Simple Types =====",
  "AgeAuthorizedToServe",
  "AssessmentVersion",
  "AttendanceEventDuration",
  "Capacity",
  "CreditConversion",
  "CreditsValue",
  "Currency",
  "DisciplineActionLength",
  "Dosage",
  "Duration",
  "EventDuration",
  "FullTimeEquivalency",
  "GPA",
  "HoursAbsent",
  "HoursPerWeek",
  "Learning",
  "MaxCompletionsForCredit",
  "MaxRawScore",
  "NumberOfDaysAbsent",
  "NumberOfDaysInAttendance",
  "NumberOfDaysTardy",
  "NumberOfParts",
  "NumberOfYears",
  "NumericGrade",
  "NumericResponse",
  "NumericValue",
  "OrderOfPriority",
  "Percent",
  "RawScoreResult",
  "SectionRating",
  "SequenceOfCourse",
  "TotalInstructionalDays",
  "TotalInstructionalTime",
  "===== Domain Entities =====",
  "===== Descriptors =====",
  "===== Associations =====",
  "===== Extended Reference Types =====",
  "===== Extended Descriptor Reference Types =====",
  "EdFiXFinance-AccountTypeDescriptorReferenceType",
  "EdFiXFinance-FinancialCollectionDescriptorReferenceType",
  "EdFiXFinance-ReportingTagDescriptorReferenceType",
  "===== Common Types =====",
  "===== Enumerations and Enumerated Collections =====",
  "===== String Simple Types =====",
  "EdFiXFinance-Code",
  "EdFiXFinance-CodeName",
  "EdFiXFinance-TagValue",
  "===== Numeric Simple Types =====",
  "EdFiXFinance-FiscalYear",
]
`;
